--- a/apps/client/src/app.html
+++ b/apps/client/src/app.html
@@ -6,6 +6,30 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1"
 		/>
+		<meta
+			name="format-detection"
+			content="telephone=no"
+		/>
+		<meta
+			http-equiv="Cache-Control"
+			content="public, max-age=31536000"
+		/>
+		<meta
+			http-equiv="X-Content-Type-Options"
+			content="nosniff"
+		/>
+		<meta
+			http-equiv="X-Frame-Options"
+			content="DENY"
+		/>
+		<meta
+			http-equiv="X-XSS-Protection"
+			content="1; mode=block"
+		/>
+		<meta
+			name="referrer"
+			content="strict-origin-when-cross-origin"
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
